--- a/static/content/b/g9/40323250-w14.md
+++ b/static/content/b/g9/40323250-w14.md
@@ -12,6 +12,7 @@ Author: 40323250
 </br>
 
 <h3>2D齒輪嚙合</h3>
+<h4>pre內的左右括號要分別使用&lt;及&gt;取代</h4>
 <pre class="brush: python">
 @bg9_40323250.route('/gear_50')
 def gear_50():
@@ -207,5 +208,76 @@ var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(ga,s)
 </br>
 <img src="http://i.imgur.com/NshB1FQ.gif">
 </br>
+<hr>
+<h2>6/27更新</h2>
+</br>
+<h3>2d繪圖程式</h3>
+<h4>利用Solvespace繪製2d圖形，並選取一面輸出2d section，並存成svg檔，取代以下程式圖形。</h4>
+<pre class="brush: python">
+@bg9_40323250_2.route('/hw_link')
+def hw_link():
+    outstring = '''
+&lt;!DOCTYPE html&gt;
+&lt;html&gt;
+&lt;head&gt;
+    &lt;meta charset="UTF-8"&gt;
+    &lt;title&gt;網際 2D 繪圖&lt;/title&gt;
+    &lt;!-- IE 9: display inline SVG --&gt;
+    &lt;meta http-equiv="X-UA-Compatible" content="IE=9"&gt;
+&lt;script type="text/javascript" src="http://brython.info/src/brython_dist.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="http://cptocadp-2015fallhw.rhcloud.com/static/Cango-8v03.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="http://cptocadp-2015fallhw.rhcloud.com/static/Cango2D-6v13.js"&gt;&lt;/script&gt;
+&lt;script type="text/javascript" src="http://cptocadp-2015fallhw.rhcloud.com/static/CangoAxes-1v33.js"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;script&gt;
+window.onload=function(){
+brython(1);
+}
+&lt;/script&gt;
+&lt;canvas id="plotarea" width="800" height="800"&gt;&lt;/canvas&gt;
+&lt;script type="text/python"&gt;
+from javascript import JSConstructor
+from browser import window
+import math
+cango = JSConstructor(window.Cango)
+cobj = JSConstructor(window.Cobj)
+shapedefs = window.shapeDefs
+obj2d = JSConstructor(window.Obj2D)
+cgo = cango("plotarea")
+cgo.setWorldCoords(-250, -250, 500, 500) 
+
+        
+#cgo.drawText("使用 Cango 繪圖程式庫!", 0, 0, {"fontSize":60, "fontWeight": 1200, "lorg":5 })
+deg = math.pi/180  
+def O(x, y, rx, ry, rot, color, border, linewidth):
+    # 旋轉必須要針對相對中心 rot not working yet
+    chamber = "M14.920 13.227 A15.699,15.699 0 0,0 14.990,34.619 A15.699,15.699 0 0,0 36.332,36.082 A15.699,15.699 0 0,0 39.320,14.900 A5.310,5.310 0 0,0 40.835,9.059 A5.310,5.310 0 0,0 35.909,5.573 A5.310,5.310 0 0,0 30.904,8.943 A15.594,15.594 0 0,0 23.234,8.637 A4.843,4.843 0 0,0 19.028,5.275 A4.843,4.843 0 0,0 14.315,7.877 A4.843,4.843 0 0,0 14.920,13.227 M18.583 19.369 A2.546,2.546 0 0,1 21.128,16.824 A2.546,2.546 0 0,1 23.674,19.369 A2.546,2.546 0 0,1 21.128,21.915 A2.546,2.546 0 0,1 18.583,19.369 M30.318 19.106 A2.399,2.399 0 0,1 32.717,16.707 A2.399,2.399 0 0,1 35.117,19.106 A2.399,2.399 0 0,1 32.717,21.506 A2.399,2.399 0 0,1 30.318,19.106 M33.424 33.696 L20.402,33.696 L20.402,30.043 L33.424,30.043 L33.424,33.696 z"
+    cgoChamber = window.svgToCgoSVG(chamber)
+    cmbr = cobj(cgoChamber, "SHAPE", {
+            "fillColor": color,
+            "border": border,
+            "strokeColor": "tan",
+            "lineWidth": linewidth })
+            
+    cmbr.translate(0, 0)   
+    
+    # hole 為原點位置
+    #hole = cobj(shapedefs.circle(4), "PATH") 
+    #cmbr.appendPath(hole) 
+
+  
+    # 放大 1 倍
+    cgo.render(cmbr, x, y, 3, rot)
+    
+O(0, 0, 0, 0, 0, "red", True, 4)
+&lt;/script&gt;
+
+'''
+    return outstring
+</pre>
+</br>
+<h3>最後心得</h3>
+<h4>這學期協同的概念與實踐又更進一步，如果不了解自己在做什麼，很容易就會造成大家的困擾，當初能夠引導同學學習感到很榮幸，但是一而再再而三的解釋同一個問題，卻造成了自己對這方面的反感，越來越失去耐性，我真的很樂意幫忙，只是請你自己也努力一下。</h4>
 </br>
 <h3>自評成績 : 93</h3>
