--- a/static/content/b/g9/40323218-期末報告.md
+++ b/static/content/b/g9/40323218-期末報告.md
@@ -47,3 +47,15 @@ Author: 40323218
 <h4>這學期一樣是一起協同來完成課題，每個人專研不同的部分，在一起分享教導自己所學的。在OnShape上進步了許多，也對python有更進一步的了解，這學期過得很充實!暑假將至，升大三後需要自訂目標，努力去達成。</h4>
 <br/>
 <h3>自評：80分</h3>
+<hr>
+<h2>cdw18 內容 : </h2>
+<h3>這週做小統整，測試各組的協同能力，追加繪製2D平面和OnShape齒輪組合。</h3>
+<br/>
+<img src="http://imgur.com/LMbfly5.png">
+<br/>
+<h4>自製2D繪圖</h4>
+<br/>
+<img src="http://imgur.com/sc68CWy.png">
+<br/>
+<h4>OnShape協同製作</h4>
+<br/>
