--- a/static/content/b/g9/40323214-期末.md
+++ b/static/content/b/g9/40323214-期末.md
@@ -34,6 +34,21 @@ Author: 40323214
 
 </br>
 
+<h2>期末自評:80分</h2>
+
+<h2>第18周期末作業</h2>
+</br>
+<h2>這次作業,因為組員都會了,所以做起來比較容易,大家也知道自己該做什麼,都有做到自己該做的</h2>
+</br>
+<h2>首先畫的是零件圖</h2>
+</br>
+<img src="http://i.imgur.com/iBmQ7Sd.png">
+<h2>再來是3D組員共同完成齒輪圖</h2>
+</br>
+<img src="http://i.imgur.com/BB3LK7f.png">
+
+</br>
+
 
 
 
